<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/profile_background_1">
    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp">
        <ImageView
            android:id="@+id/imv_profile_avt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/beoj"></ImageView>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txt_profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Ba Gà Profile"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card1"></TextView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toTopOf="@id/txt_profile_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardBackgroundColor="@color/white"
        android:elevation="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_margin="10dp"
           >
            <EditText
                android:id="@+id/edt_profile_hoten"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/nhovaten"
                android:text="@string/hovaten"
                style="@style/myEdittextStyle"
                android:background="@drawable/bg_20_edittext"
                android:drawableLeft="@drawable/name"
                ></EditText>
            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/edt_profile_namsinh"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/nnamsinh"
                android:text="@string/namsinh"
                style="@style/myEdittextStyle"
                android:drawableLeft="@drawable/birthday"
                android:background="@drawable/bg_20_edittext"
                ></EditText>
            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/edt_profile_sodienthoai"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/nsodienthoai"
                android:text="@string/sodienthoai"
                style="@style/myEdittextStyle"
                android:drawableLeft="@drawable/phonenumber"
                android:background="@drawable/bg_20_edittext"
                ></EditText>
            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/edt_profile_diachi"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/ndiachi"
                android:text="@string/diachi"
                style="@style/myEdittextStyle"
                android:drawableLeft="@drawable/address"
                android:background="@drawable/bg_20_edittext"
                ></EditText>
            <Button
                android:id="@+id/btn_profile_suathongtin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/suathongtin"
                android:textSize="15dp"
                android:textColor="@color/white"
                android:background="@drawable/bg_btn_20_yellow"
                android:layout_marginTop="10dp"
                ></Button>
            <Button
                android:id="@+id/btn_profile_huy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/huy"
                android:textSize="15dp"
                android:textColor="@color/greyL"
                android:background="@android:color/transparent"
                android:layout_marginTop="10dp"
                ></Button>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>